sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:8: error: not found: value j
while(j >= gap && (getValue(j-gap) > value)) {
      ^AlgShellSort:9: error: not found: value j
copy(j-gap,j);
     ^AlgShellSort:10: error: not found: value j
j -= gap;
^AlgShellSort:17: error: not found: value gap
      while (j>= gap && (getValeur(j-ecart)>valeur))
                 ^AlgShellSort:19: error: not found: value copier
       copier(j-ecart,j)
       ^